[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["unshrink"]

[project]
name = "unshrink"
version = "0.0.0"
description = "Tools for debiasing ML predictions"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
]
